# sas_robot_driver_franka

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  setup.py
cfg/: sas_operator_side_receiver.yaml  sas_patient_side_manager.yaml  sas_robot_driver_franka_1.yaml  sas_robot_driver_franka_2.yaml  sas_robot_driver_franka_3.yaml  sas_robot_driver_franka_4.yaml  sas_robot_driver_franka_hand_1.yaml  sas_robot_driver_mirror_coppelia_franka_1.yaml
constraints_manager/: README.md
constraints_manager/constraints_manager_example/: CMakeLists.txt  main.cpp
constraints_manager/include/: constraints_manager.h
constraints_manager/src/: constraints_manager.cpp
include/: Grasp.h  GraspRequest.h  GraspResponse.h  GripperState.h  Move.h  MoveRequest.h  MoveResponse.h  custom_motion_generation.h  motion_generator.h  quadratic_program_motion_generator.h  robot_coppelia_ros_interface.h  robot_interface_franka.h  robot_interface_hand.h  sas_robot_driver_coppelia.h  sas_robot_driver_franka.h
include/generator/: custom_motion_generation.h  quadratic_program_motion_generator.h
include/robot_dynamic/: qros_robot_dynamics_provider.h
include/sas_robot_driver_franka/: robot_interface_franka.h  sas_robot_driver_franka.h  sas_robot_driver_franka.hpp
include/sas_robot_driver_franka/coppelia/: sas_robot_driver_coppelia.hpp
include/sas_robot_driver_franka/deprecated/: robot_coppelia_ros_interface.h
include/sas_robot_driver_franka/generator/: custom_motion_generation.h  motion_generator.h  quadratic_program_motion_generator.h
include/sas_robot_driver_franka/interfaces/: qros_effector_driver_franka_hand.hpp  robot_interface_franka.hpp
include/sas_robot_driver_franka/interfaces/local/msg/: gripper_state.h  gripper_state.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
include/sas_robot_driver_franka/interfaces/local/msg/detail/: gripper_state__builder.hpp  gripper_state__description.c  gripper_state__functions.c  gripper_state__functions.h  gripper_state__rosidl_typesupport_fastrtps_c.h  gripper_state__rosidl_typesupport_fastrtps_cpp.hpp  gripper_state__rosidl_typesupport_introspection_c.h  gripper_state__rosidl_typesupport_introspection_cpp.hpp  gripper_state__struct.h  gripper_state__struct.hpp  gripper_state__traits.hpp  gripper_state__type_support.c  gripper_state__type_support.cpp  gripper_state__type_support.h  gripper_state__type_support.hpp
include/sas_robot_driver_franka/interfaces/local/srv/: grasp.h  grasp.hpp  move.h  move.hpp
include/sas_robot_driver_franka/interfaces/local/srv/detail/: grasp__builder.hpp  grasp__description.c  grasp__functions.c  grasp__functions.h  grasp__rosidl_typesupport_fastrtps_c.h  grasp__rosidl_typesupport_fastrtps_cpp.hpp  grasp__rosidl_typesupport_introspection_c.h  grasp__rosidl_typesupport_introspection_cpp.hpp  grasp__struct.h  grasp__struct.hpp  grasp__traits.hpp  grasp__type_support.c  grasp__type_support.cpp  grasp__type_support.h  grasp__type_support.hpp  move__builder.hpp  move__description.c  move__functions.c  move__functions.h  move__rosidl_typesupport_fastrtps_c.h  move__rosidl_typesupport_fastrtps_cpp.hpp  move__rosidl_typesupport_introspection_c.h  move__rosidl_typesupport_introspection_cpp.hpp  move__struct.h  move__struct.hpp  move__traits.hpp  move__type_support.c  move__type_support.cpp  move__type_support.h  move__type_support.hpp
include/sas_robot_driver_franka/robot_dynamic/: qros_robot_dynamics_client.hpp  qros_robot_dynamics_interface.h  qros_robot_dynamics_provider.h  qros_robot_dynamics_server.hpp
launch/: sas_robot_driver_coppelia_franka_1.launch  sas_robot_driver_franka_1.launch  sas_robot_driver_franka_example.py  sas_robot_driver_franka_hand_1.launch  sas_robot_driver_franka_hand_example.py  sas_robot_driver_franka_simulation_example.py  sas_robot_driver_mirror_coppelia_franka_1.launch
launch/depreciated/: sas_operator_side_receiver.launch  sas_patient_side_manager.launch  sas_robot_driver_franka_hand_1.launch
msg/: GripperState.msg
qt/configuration_window/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
sas_robot_driver_franka/: __init__.py
scripts/: example_gripper_control.py  publish_dumy_robot_dynmaics.py  subscribe_dummy_dynamic.py
src/: custom_motion_generation.cpp  motion_generator.cpp  quadratic_program_motion_generator.cpp  robot_coppelia_ros_interface.cpp  robot_coppelia_ros_interface_node.cpp  robot_interface_franka.cpp  sas_robot_driver_coppelia.cpp  sas_robot_driver_coppelia_node.cpp  sas_robot_driver_franka.cpp  sas_robot_driver_franka_hand.cpp  sas_robot_driver_franka_hand.h  sas_robot_driver_franka_hand_node.cpp  sas_robot_driver_franka_node.cpp  teleop_franka_node.cpp
src/coppelia/: sas_robot_driver_coppelia.cpp  sas_robot_driver_coppelia.h
src/deprecated/: robot_coppelia_ros_interface.cpp  robot_coppelia_ros_interface_node.cpp
src/dynamic_interface/: sas_robot_dynamic_provider.cpp  sas_robot_dynamic_provider.h
src/generator/: custom_motion_generation.cpp  motion_generator.cpp  quadratic_program_motion_generator.cpp
src/hand/: qros_effector_driver_franka_hand.cpp  qros_effector_driver_franka_hand.h  robot_interface_hand.cpp  sas_robot_driver_franka_hand.cpp  sas_robot_driver_franka_hand.h
src/joint/: robot_interface_franka.cpp  sas_robot_driver_franka.cpp
src/robot_dynamics/: qros_robot_dynamic_py.cpp  qros_robot_dynamics_client.cpp  qros_robot_dynamics_interface.cpp  qros_robot_dynamics_provider.cpp  qros_robot_dynamics_py.cpp  qros_robot_dynamics_server.cpp
src/sas_robot_driver_franka/: __init__.py  franka_gripper_interface.py
srv/: Grasp.srv  Move.srv
