<?xml version="1.0"?>
<package format="2">
  <name>sas_robot_driver_franka</name>
  <version>0.0.0</version>
  <description>The sas_driver_franka package</description>
  <maintainer email="moonshot@todo.todo">moonshot</maintainer>

  <license>LGPLv3</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>std_msgs</depend>
  <depend>sas_clock</depend>
  <depend>sas_robot_driver</depend>
  <depend>sas_common</depend>
  <depend>pybind11_catkin</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <!--  <depend>rosidl_default_generator</depend>-->

  <test_depend>roscpp</test_depend>
  <test_depend>rospy</test_depend>
  <test_depend>tf2_ros</test_depend>
  <test_depend>tf2</test_depend>
  <test_depend>std_msgs</test_depend>
  <test_depend>sas_clock</test_depend>
  <test_depend>sas_robot_driver</test_depend>
  <test_depend>sas_common</test_depend>
  <!--  <test_depend>message_runtime</test_depend>-->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>